apps/monitoring-config/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: https://auth.0x42labs.net/api/verify?rd=$scheme://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-signin: https://auth.0x42labs.net/#/?rd=$scheme://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Groups,Remote-Name,Remote-Email
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.0x42labs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.0x42labs.net
    secretName: grafana-tls
