apps/monitoring-config/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: https://auth.0x42labs.net/api/verify?rd=$scheme://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-signin: https://auth.0x42labs.net/#/?rd=$scheme://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Groups,Remote-Name,Remote-Email
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.0x42labs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
  tls:
  - hosts:
    - prometheus.0x42labs.net
    secretName: prometheus-tls
